# gitguard

./: .coveragerc  .cspell.json  .dockerignore  .editorconfig  .env.dogfood  .gitignore  .gitleaks.toml  .markdown-link-check.json  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  GITHUB_ACTIONS_FIX.md  INCIDENT_RUNBOOK.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  REPOSITORY_METADATA.md  RUNBOOK.md  SECURITY.md  SELF_DOGFOOD.md  SUPPORT.md  WORKFLOW_FIXES.md  WSL2_SETUP_GUIDE.md  app.json  claude_desktop_config.json  commitlint.config.js  docker-compose.temporal.yml  fly.toml  gitguard-launch.md  mise.toml  mkdocs.yml  pyproject.toml  pytest.ini  railway.json  (+10 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  dependabot.yml  repository-metadata.json
apps/: __init__.py
apps/guard-codex/: Dockerfile  Dockerfile.trigger  __init__.py  activities.py  api_graph.py  embeddings.py  env.sample  graph_schema.sql  main.py  maintenance_workflow.py  metrics.py  nats_runner.py  owners_emit.py  ownership.py  policy_explain.py  pyproject.toml  requirements.txt  scheduler.py  test_complete_integration.py  test_embeddings.py  test_main.py  test_mermaid.py  test_owners_index.py  test_policy_integration.py  worker.py  workflow.py
apps/guard-codex/docs_src/prs/: 42.md  43.md  44.md
config/: gitguard.app-manifest.yml  gitguard.settings.example.yaml  github-app-manifest.json
demo/: README.md  index.html  (+1 more)
(+136 files in other folders)
